force-app/main/default/objects/VILigne_Budget__c/VILigne_Budget__c.object-meta.xml
<CustomObject>
    <label>Ligne de budget</label>
    <nameField>
        <displayFormat>B{00000000}</displayFormat>
        <label>Ref de ligne de budget</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>