force-app/main/default/objects/VILigne_Budget__c/fields/Avenant__c.field-meta.xml
<CustomField>
    <fullName>Avenant__c</fullName>
    <label>Avenant</label>
    <referenceTo>VIAvenant__c</referenceTo>
    <relationshipLabel>Lignes de budgets</relationshipLabel>
    <relationshipName>Budgets_sur_affaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>