force-app/main/default/objects/VILigne_Budget__c/fields/Centre_Section__c.field-meta.xml
<CustomField>
    <fullName>Centre_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centre / Section</label>
    <referenceTo>VICentre_Section__c</referenceTo>
    <relationshipName>Budgets_sur_affaires</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>