force-app/main/default/objects/VILigne_Budget__c/fields/Complet_E__c.field-meta.xml
<CustomField>
    <fullName>Complet_E__c</fullName>
    <label>Complet €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>