force-app/main/default/objects/VILigne_Budget__c/fields/Heures__c.field-meta.xml
<CustomField>
    <fullName>Heures__c</fullName>
    <label>Heures</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>