force-app/main/default/objects/VILigne_Budget__c/fields/Nom_frn__c.field-meta.xml
<CustomField>
    <fullName>Nom_frn__c</fullName>
    <label>Nom_frn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>