force-app/main/default/objects/VILigne_Budget__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <formula>text(Avenant__r.Statut_avenant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>