force-app/main/default/objects/VILigne_Budget__c/fields/Type_de_depense__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type de dépense</label>
    <referenceTo>VIType_de_depense__c</referenceTo>
    <relationshipName>Budgets_sur_affaires</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>