force-app/main/default/objects/VILigne_Budget__c/validationRules/devise_de_la_ligne_de_budget.validationRule-meta.xml
<ValidationRule>
    <fullName>devise_de_la_ligne_de_budget</fullName>
    <active>true</active>
    <errorConditionFormula>text(CurrencyIsoCode)!= text(Avenant__r.CurrencyIsoCode )</errorConditionFormula>
    <errorMessage>La devise de f&apos;avenant doit être identique à celle de la ligne budgétaire</errorMessage>
</ValidationRule>