force-app/main/default/objects/VILigne_Budget__c/validationRules/SI_Mo_heures_obligatoires.validationRule-meta.xml
<ValidationRule>
    <fullName>SI_Mo_heures_obligatoires</fullName>
    <active>true</active>
    <errorConditionFormula>and(
  $Setup.VIParametres__c.Sans_Calcul_de_PRI__c=false,
  left(Type_de_depense__r.Name,3)=&apos;MO &apos;, 
  isblank(Heures__c )
  )</errorConditionFormula>
    <errorMessage>Pour le type de dépense &apos;MO &apos;, les heures sont obligatoires</errorMessage>
</ValidationRule>