force-app/main/default/objects/VILigne_Budget__c/validationRules/Si_pas_MO_heures_vide.validationRule-meta.xml
<ValidationRule>
    <fullName>Si_pas_MO_heures_vide</fullName>
    <active>true</active>
    <errorConditionFormula>and(
$Setup.VIParametres__c.Sans_Calcul_de_PRI__c=false,
left(Type_de_depense__r.Name,3)!=&apos;MO &apos;,
!isblank(Heures__c )
)</errorConditionFormula>
    <errorMessage>Si le type de dépense n&apos;est pas &apos;MO &apos;, les heures doivent être vides</errorMessage>
</ValidationRule>